<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.caredemo.MainActivity" >

    <!--
    <item
        android:id="@+id/action_scan"
        android:actionViewClass="android.widget.Tab"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/uhf_msg_tab_scan"/>
    <item
        android:id="@+id/action_read"
        android:orderInCategory="100"
        android:actionViewClass="android.widget.Tab"
        android:showAsAction="always"
        android:title="@string/uhf_msg_tab_read"/>
    <item
        android:id="@+id/action_write"
        android:orderInCategory="100"
        android:actionViewClass="android.widget.Tab"
        android:showAsAction="always"
        android:title="@string/uhf_msg_tab_write"/>
    -->
    <item
        android:id="@+id/action_inventory"
        android:title="@string/uhf_msg_tab_inventory"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_write"
        android:title="@string/uhf_msg_tab_write"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_lock"
        android:title="@string/uhf_msg_tab_lock"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set"
        android:title="@string/uhf_msg_tab_set"
        app:showAsAction="never" />
    <item
        android:id="@+id/UHF_ver"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>