<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:layout_width="327dp"
        android:layout_height="458dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="120dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:background="@color/gray"
                android:paddingLeft="@dimen/text_size_12"
                android:paddingRight="@dimen/text_size_12"
                app:srcCompat="@drawable/logo_white_text1" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/et_email"
                android:inputType="textEmailAddress"
                android:textAllCaps="false" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:ems="10"
                android:hint="@string/et_password"
                android:inputType="textPassword" />

            <!--EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/et_code"
                android:inputType="textPersonName" /-->

            <Spinner
                android:id="@+id/sp_code"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:spinnerMode="dropdown"
                android:prompt="@string/title_prompt_select"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:background="@drawable/button_bg_up"
                android:text="@string/btn_ingresar"
                android:textColor="@color/white1"
                android:textSize="@dimen/text_size_19" />

            <Button
                android:id="@+id/btn_nuevaEmpresa"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_bg_up"
                android:text="@string/btn_nueva_empresa"
                android:textColor="@color/white1"
                android:textSize="@dimen/text_size_19" />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>