<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/RgInventory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <!--RadioButton
            android:id="@+id/RbInventorySingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbInventorySingle"
            android:textColor="@drawable/check_text_color2"
            android:textSize="15sp" /-->

        <RadioButton
            android:id="@+id/RbInventoryLoop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/rbInventoryLoop"
            android:textColor="@drawable/check_text_color2"
            android:textSize="15sp" />


    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray1" />

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">


        <LinearLayout
            android:id="@+id/llContinuous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/btnFilter"
                android:layout_width="74dp"
                android:layout_height="37dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="3"
                android:background="@drawable/button_bg"
                android:text="@string/uhf_title_filter"
                android:textColor="@color/white"
                android:textSize="11sp" />
            <Button
            android:id="@+id/BtSync"
            android:layout_width="74dp"
            android:layout_height="37dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_bg"
            android:text="@string/btSync"
            android:textColor="@color/white"
            android:textSize="11sp" />

        </LinearLayout>

        <Spinner
            android:id="@+id/spInventories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dialog"
            android:prompt="@string/title_prompt_select"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout12"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/BtInventory"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/btInventory"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/BtClear"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_bg"
            android:text="@string/btClear"
            android:textColor="@color/white"
            android:textSize="11sp" />


    </LinearLayout>

    <!--
    <LinearLayout
        android:id="@+id/layout0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvCountOfTags"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/BtClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btClear"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@drawable/button_bg"
            android:layout_marginRight="5dp" />
    </LinearLayout>
    -->

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/gray1" />

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/tvTagUii"
            android:textSize="15sp" />
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="TID"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tv_count"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textColor="@color/red1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvTagLen"
            android:visibility="gone" />

        <!--TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tvTagCount"
            android:textSize="15sp" /-->


    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_height="1px"
        android:background="@color/gray1" />
    <!-- android:layout_width="match_parent"
 -->
    <!--LinearLayout
    android:id="@+id/layout5"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingTop="5dp"
    android:paddingRight="10dp"
    android:paddingBottom="5dp"></LinearLayout-->

    <ListView
        android:id="@+id/LvTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollingCache="true"
        android:smoothScrollbar="true"/>

        <!--ListView
            android:id="@+id/LvTags2"
            android:layout_width="198dp"
            android:layout_height="423dp"
            android:layout_gravity="end" /-->
</LinearLayout>
